deploy/dev/openframe-microservices/openframe-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openframe-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openframe-ui
  template:
    metadata:
      labels:
        app: openframe-ui
    spec:
      imagePullSecrets:
        - name: github-pat-secret

      containers:
        - name: openframe-ui
          image: openframe-ui
          ports:
            - containerPort: 3000
              name: http
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          # resources:
          #   requests:
          #     memory: "256Mi"
          #     cpu: "0.2"
          #   limits:
          #     memory: "512Mi"
          #     cpu: "0.5"
