deploy/dev/openframe-microservices/openframe-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openframe-ui
spec:
  selector:
    app: openframe-ui
  ports:
    - port: 3000
      targetPort: 3000
      name: http
  type: ClusterIP
