deploy/dev/openframe-microservices/openframe-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openframe-ui
  annotations:
    cert-manager.io/cluster-issuer: "cluster-issuer"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - openframe-ui.192.168.100.100.nip.io
    secretName: openframe-ui-tls-secret
  rules:
    - host: openframe-ui.192.168.100.100.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openframe-ui
                port:
                  name: http
